--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,4 +12,8 @@
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
 
+  <ion-item *ngFor="let post of posts">
+    {{post.id}}
+  </ion-item>
+
 </ion-content>
