--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
   The world is your oyster.
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-    <button (click)="tampil()">klik</button>
+    <button (click)="memasang()">klik</button>
   </p>
 
   <ion-card>
